namespace ASSPhysics.Constants
{
	public static class AnimationNames
	{
		public static class Tool
		{
			public const string automated = "Automated";
			public const string focused = "Focused";
			public const string horizontalFlip = "HorizontalFlip";

			public const string stateFlat = "StateFlat";
			public const string stateGrab = "StateGrab";
			public const string stateSlap = "StateSlap";
		}

		public static class Interactable
		{
			public const string highlighted = "Highlighted"; //Bool
			public const string pressed = "Pressed"; //Bool
		}

		public static class Curtains
		{
			public const string open = "CurtainsOpen";
			public const string spotlightFocused = "SpotlightFocused";
			public const string drumrollFinalClash = "FinalClash";
		}

		public static class Dialog
		{
			public const string close = "Close";
		}
	}
}